[APPBUG-2247] leftNav and globalNav sould be aligned correctly
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@27850 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/globalnav.css
+++ b/projects/Media/docroot/assets/css/common/globalnav.css
@@ -355,8 +355,9 @@ ul.globalnavPopups li {
 #globalnavpopup {
   position: absolute;
   z-index:1001;
-  width:968px;
+  width:970px;
   overflow:hidden;
+  margin: 0 -1px;
 }
 
 .globalnav-popup-content .department{
